# cookiecutter_poetry_django

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  README.md  manage.py  mypy.ini  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  settings.py  urls.py  wsgi.py
