[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
psycopg2 = "^2.9.1"
django-filter = "^2.4.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.3"
django-debug-toolbar = "^3.2.1"
bpython = "^0.21"
Werkzeug = "^2.0.1"
mypy = "^0.910"
flakehell = "^0.9.0"
flake8-docstrings = "^1.6.0"
flake8-commas = "^2.0.0"
flake8-quotes = "^3.2.0"
flake8-bandit = "^2.1.2"
black = "^21.6b0"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.5.0"
flake8-eradicate = "^1.0.0"
flake8-isort = "^4.0.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.4.2"
pep8-naming = "^0.12.0"
tox = "^3.23.1"
pytest = "^6.2.4"
django-stubs = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# -----------------------------------------------flakehell
[tool.flakehell]
extended_default_ignore=[]
exclude = ["README.rst", "README.md"]
format = "colored"
max_line_length = 88
show_source = true
whitelist = "../../allowlist.txt"

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
#flake8-darglint = ["+*"]
flake8-docstrings = ["+*", "-D100"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
#flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

#-----------------------------------------------black
[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
